# verbuild

./: .gitignore  AUTHORS  CFormatter.hpp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COutput.hpp  Doxyfile  Enums.hpp  Formatter.hpp  ISSUE_TEMPLATE.md  README.md  Settings.cpp  Settings.hpp  VersionInfo.hpp  config.h  main.cpp  resource.rc  verbuild.pro  version.hpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: FindBoost.cmake  GetGitRevisionDescription.cmake
git-hooks/: pre-commit  prepare-commit-msg
scripts/: dog-food  dog-food.bat  install-hooks  make-descrip  make-xxd
src/: CMakeLists.txt
src/gui/: gpl_banner.html
src/help/: create.txt  debug.txt  format.txt  groups.txt  increment.txt  list_groups.txt  list_increments.txt  list_transforms.txt  metadata.txt  output.txt  prefix.txt  semver.txt  transform.txt  verbose.txt  year.txt
src/lua/: CMakeLists.txt
src/lualib/: c.lua
src/lualib/translators/: c.lua
src/resources/: help.h
src/resources/cli/: banner.h
src/resources/gui/: authors.h  gpl_banner.h
src/resources/help/: create.h  debug.h  format.h  groups.h  increment.h  list_groups.h  list_increments.h  list_transforms.h  metadata.h  output.h  prefix.h  semver.h  transform.h  verbose.h  year.h
src/tests/: Console_test.cpp  Enums_test.cpp  IncrModeParser_test.cpp  VersionInfo_test.cpp
src/verbuild/: Compiler.hpp  Config.cpp  Config.hpp  Console.cpp  Console.hpp  Enums.cpp  Enums.hpp  GroupsParser.cpp  GroupsParser.hpp  IncrModeParser.cpp  IncrModeParser.hpp  IncrTypeParser.cpp  IncrTypeParser.hpp  LuaScript.cpp  LuaScript.hpp  Opts.cpp  Opts.hpp  Parser.cpp  Parser.hpp  Platform.hpp  Settings.cpp  Settings.hpp  Support.hpp  Transform.cpp  Transform.hpp  TransformParser.cpp  TransformParser.hpp  Transform_C.cpp  Transform_C.hpp  Transform_Shell.hpp  Utils.cpp  Utils.hpp  VersionInfo.cpp  VersionInfo.hpp  banner.txt  bitmask.hpp  cstdint.hpp  main.cpp  resource.rc  version.hpp
